--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -978,7 +978,7 @@ li.menu-item .nav-label.sale-label::before{
 }
 .wrap-banner.banner-style-3 .sub-title::first-letter{
     font-weight: 600;
-    color: red;
+    color: #4C1775;
     text-decoration: line-through;
 }
 .wrap-banner.banner-style-3 .desc{
@@ -1058,7 +1058,7 @@ li.menu-item .nav-label.sale-label::before{
 }
 .wrap-main-slide .slide-1 .sale-info .price{
     font-weight: 700;
-    color: #ff2832;
+    color: #4C1775;
     font-size: 24px;
 }
 .wrap-main-slide .slide-3 .btn-link,
@@ -1080,7 +1080,7 @@ li.menu-item .nav-label.sale-label::before{
 .wrap-main-slide .slide-2 .f-title{
     font-size: 40px;
     line-height: 35px;
-    color: #ff2832;
+    color: #4C1775;
     font-weight: 700;
     display: inline-block;
     text-transform: uppercase;
@@ -4488,7 +4488,7 @@ article.single-post blockquote p:last-child::after{
 }
 .wrap-product-detail .detail-info .wrap-price ins>p{
     font-weight: 600;
-    color: #ff2832;
+    color: #4C1775;
     text-align: left;
     padding-right: 8px;
 }
@@ -6349,13 +6349,13 @@ background-color: #888888;
 	    display: inline-block;
 	    float: left;
 	    padding: 3px 0;
-	    border: 1px solid #333;
+	    /* border: 1px solid #333; */
 	}
 	.header .main-info-area .right-section .show-up-after-1024 span{
 	    display: inline-block;
 	    width: 30px;
-	    height: 2px;
-	    background: #333333;
+	    height: 4px;
+	    background: white;
 	    margin: 3px 5px;
 	    float: left;
 	    clear: both;
@@ -6655,7 +6655,13 @@ background-color: #888888;
 
 @media (max-width: 600px) {
 
+    .product-wish .fa {
+        color: #4c1775;
+    }
     .fa-heart:before {
+        color: white;
+    }
+    .fa-home:before {
         color: white;
     }
     .fa-shopping-basket:before {
@@ -6670,7 +6676,7 @@ background-color: #888888;
     padding: 10px;
     width: 100%;
     left: 0;
-    padding-left: 50px;}
+    padding-left: 30px;}
 
     img {
         margin-bottom: 10px;
