--- a/public/assets/css/color-01.css
+++ b/public/assets/css/color-01.css
@@ -106,5 +106,9 @@
 	border-color: #4c1775 !important;
 }
 .wrap-footer-content .wrap-function-info .fc-info-item .wrap-left-info .fc-desc{
-	color: #eee7e8 !important;
+	color: #4c1775 !important;
+}
+
+.wrap-footer-content .wrap-function-info{
+	background-color: #FFFF;
 }
