--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1895,14 +1895,13 @@ li.menu-item .nav-label.sale-label::before {
     background-color: #f9f9f9;
 }
 
-.tab-style-1 .tab-control .tab-control-item.active,
-.tab-style-1 .tab-control .tab-control-item:hover {
-    background: transparent;
-    border-bottom-color: transparent;
+.tab-style-1 .tab-control .tab-control-item.active, .tab-style-1 .tab-control .tab-control-item:hover {
+    background: #e35e5e00;
+    border-bottom-color: #c34a4a00;
     border-right-color: transparent;
-    color: #222222;
+    color: #f1f1f1;
+    background-color: #40b0b5;
 }
-
 .wrap-product-tab .tab-contents {
     position: relative;
     display: inline-block;
@@ -2645,7 +2644,7 @@ li.menu-item .nav-label.sale-label::before {
 
 .wrap-shop-control {
     padding: 4.5px 0;
-    background: #f5f5f5;
+    background: #40b0b5;
     margin-top: 33px;
 }
 
@@ -2654,7 +2653,7 @@ li.menu-item .nav-label.sale-label::before {
     font-size: 14px;
     line-height: 34px;
     font-weight: 700;
-    color: #222222;
+    color: #ffff;
     margin: 0;
     padding-left: 20px;
 }
@@ -2707,7 +2706,7 @@ li.menu-item .nav-label.sale-label::before {
 
 .change-display-mode .display-mode:hover,
 .change-display-mode .display-mode.active {
-    color: #333333;
+    color: #ffff;
 }
 
 .change-display-mode .display-mode:last-child {
@@ -2717,7 +2716,7 @@ li.menu-item .nav-label.sale-label::before {
 .change-display-mode .display-mode {
     font-size: 13px;
     line-height: 34px;
-    color: #666666;
+    color: #ffff;
     text-transform: capitalize;
     margin-right: 27px;
 }
@@ -2765,8 +2764,8 @@ li.menu-item .nav-label.sale-label::before {
     width: 100%;
     font-size: 14px;
     line-height: 34px;
-    color: #888888;
-    background: #f5f5f5;
+    color: #ffff;
+    background: #40b0b5;
     border: 1px solid #e6e6e6;
     text-align: center;
     font-weight: 600;
@@ -8433,7 +8432,10 @@ table.shop_attributes tbody {
 }
 
 .bg-white {
-    background-color: #fff !important;
+    background-color: #4C1775!important;
+    color: white;
+    padding: 5px;
+    margin-left: 5px !important;
 }
 
 nav svg {
