--- a/public/assets/css/color-01.css
+++ b/public/assets/css/color-01.css
@@ -72,7 +72,7 @@
 .summary-item .btn,
 .choose-payment-methods .payment-method input[type=radio]:checked + span::before,
 .main-info-area .right-section .wrap-icon-section.minicart .index{
-	background: #4c1775;
+	background: #40b0b5;
 }
 .has-child-cate .toggle-control:hover::after,
 .has-child-cate .toggle-control:hover::before,
