--- a/public/assets/css/bot.css
+++ b/public/assets/css/bot.css
@@ -31,7 +31,7 @@ input{
       overflow-y: scroll;
       height: 90%;
       width: 100%;
-      background-color: yellowgreen;
+      background-color: #41b0b5;
       padding: 15px;
       margin: 15px;
       border-radius: 10px;
@@ -61,7 +61,7 @@ input{
      z-index: 3;
      right: 2rem;
      bottom: 2rem;
-     background-color: #FF2832;
+     background-color: #4c1775;
      border-radius: 15px;
      color: #fff;
      padding: 1rem;
@@ -72,7 +72,7 @@ input{
   }
   
   .chat-header{
-      background-color: #FF2832;
+      background-color: #4c1775;
       color: #fff;
       padding: .6rem;
       border-radius: 1rem 1rem 0 0;
@@ -89,8 +89,8 @@ input{
   }
   
   .btn-outline-success{
-    background-color: #FF2832 !important;
-    border-color: #FF2832 !important;
+    background-color: #4c1775 !important;
+    border-color: #4c1775 !important;
     color: #fff !important;
     padding: 1rem !important;
     margin-right: 1.5rem !important; 
