Mobile Menu Sidebar All Category Show

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7084,6 +7084,9 @@ table.shop_attributes tbody {
 }
 
 @media (min-width: 991px) {
+    .cate-link{
+        display: none !important;
+    }
     .container {
         padding: 0;
     }
