admin Dashboard Order BarChart Added

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7084,7 +7084,7 @@ table.shop_attributes tbody {
 }
 
 @media (min-width: 991px) {
-    .cate-link{
+    .cate-link2{
         display: none !important;
     }
     .container {
